#231 Fix alignment

--- a/src/modules/betterdiscord/plugins/_Dastan21.FavoriteMedia.scss
+++ b/src/modules/betterdiscord/plugins/_Dastan21.FavoriteMedia.scss
@@ -6,6 +6,7 @@
 
 // Chat box icons
 .theme-dark .buttonContainer-2lnNiN.fm-buttonContainer{
+    align-items: flex-start;
     .button-ejjZWC{
         width: 32px;
         height: 32px;
